--- a/index.html
+++ b/index.html
@@ -17,36 +17,91 @@
 
       <div class="faq">
         <h1>FAQ</h1>
-        <div class="col">
-          <div class="questionAnswer">
-            <p class="question">How many team members can I invite?</p>
-            <p class="answer">You can invite up to 2 additional users on the Free plan. There is no limit on 
-              team members for the Premium plan.</p>
-          </div>
-          <div class="arrowIconDiv">
-            <img src="./images/icon-arrow-down.svg" alt="Arrow down" class="arrowIcon">
-          </div>
-
+        <div class="col col-one">
+          <div class="box">
+            <div class="questionAnswer">
+              <p class="question">How many team members can I invite?</p>
+              <p class="answer">You can invite up to 2 additional users on the Free plan. There is no limit on 
+                team members for the Premium plan.</p>
+            </div>
+            <div class="arrowIconDiv">
+              <img src="./images/icon-arrow-down.svg" alt="Arrow down" class="arrowIcon">
+            </div>
+          </div>  
+          <div class="borderBottom"></div>        
         </div>
-      </div>
 
+        <div class="col col-two">
+          <div class="box">
+            <div class="questionAnswer">
+              <p class="question q-two"> What is the maximum file upload size?</p>
+              <p class="answer a-two">No more than 2GB. All files in your account must fit your allotted storage space.</p>
+            </div>
+            <div class="arrowIconDiv">
+              <img src="./images/icon-arrow-down.svg" alt="Arrow down" class="arrowIcon icon-two">
+            </div>
+          </div>  
+          <div class="borderBottom"></div>        
+        </div>
+
+        <div class="col col-three">
+          <div class="box">
+            <div class="questionAnswer">
+              <p class="question q-three"> How do I reset my password?</p>
+              <p class="answer a-three">Click “Forgot password” from the login page or “Change password” from your profile page.
+                A reset link will be emailed to you.</p>
+            </div>
+            <div class="arrowIconDiv">
+              <img src="./images/icon-arrow-down.svg" alt="Arrow down" class="arrowIcon icon-three">
+            </div>
+          </div>  
+          <div class="borderBottom"></div>        
+        </div>
+
+        <div class="col col-four">
+          <div class="box">
+            <div class="questionAnswer">
+              <p class="question q-four"> Can I cancel my subscription?</p>
+              <p class="answer a-four"> Yes! Send us a message and we’ll process your request no questions asked.</p>
+            </div>
+            <div class="arrowIconDiv">
+              <img src="./images/icon-arrow-down.svg" alt="Arrow down" class="arrowIcon icon-four">
+            </div>
+          </div>  
+          <div class="borderBottom"></div>        
+        </div>
+
+        <div class="col col-five">
+          <div class="box">
+            <div class="questionAnswer">
+              <p class="question q-five"> Do you provide additional support?</p>
+              <p class="answer a-five"> Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+            </div>
+            <div class="arrowIconDiv">
+              <img src="./images/icon-arrow-down.svg" alt="Arrow down" class="arrowIcon icon-five">
+            </div>
+          </div>  
+          <div class="borderBottom"></div>        
+        </div>
+
+
+      </div>
     </div>
   </main>
-  <!-- 
+  
   
 
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
+ 
+  
 
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
+  
+  
 
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
+  
+ 
 
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours. -->
+  
+  
     <script src="script.js"></script>
 </body>
 </html>
