Added desktop version

--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
   <main>
     <div class="container">
       <div class="heroImg">
-        <img src="./images/illustration-woman-online-mobile.svg" alt="Women Online" class="womenOnlineMobile">
-        <img src="./images/bg-pattern-mobile.svg" alt="Background" class="background">
+        <div class="mobile">
+          <img src="./images/illustration-woman-online-mobile.svg" alt="Women Online" class="womenOnlineMobile">
+          <img src="./images/bg-pattern-mobile.svg" alt="Background" class="background">
+        </div>
+
+        <div class="desktop">
+          <img src="./images/illustration-woman-online-desktop.svg" alt="Women Online" class="womenOnlineDesktop">
+          <img src="./images/illustration-box-desktop.svg" alt="box" class="boxDesktop">
+        </div>
       </div>
 
       <div class="faq">
@@ -83,25 +90,9 @@
           </div>  
           <div class="borderBottom"></div>        
         </div>
-
-
       </div>
     </div>
   </main>
-  
-  
-
- 
-  
-
-  
-  
-
-  
- 
-
-  
-  
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
