Few changes added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
       <div class="imgDivMobile">
         <img src="./images/illustration-woman-online-mobile.svg" alt="Women Online Shopping" class="imgMobile">
       </div>
-      
+
+      <img src="./images/illustration-box-desktop.svg" alt="" class="boxImg">
+      <div class="imgDivDesktop"></div>
     </div>
     
     <div class="faq">
